--- a/src/TODO
+++ b/src/TODO
@@ -1,3 +1,18 @@
-### Implement checks for TS opt that freq always needs to be below -50 
 
-## Update check_status function to give ts flag to check out put for significant negative modes 
+Implement gather_data
+
+implement make simple plots
+
+
+Implement sp 
+
+implement FOD
+
+implemente crest
+
+implement censo
+
+
+
+
+
