--- a/orca_pipeline/TODO
+++ b/orca_pipeline/TODO
@@ -1,9 +1,6 @@
-ADD pyqrc option
 
-should be executed, if IRC fails for n times
 
-test making confomers and making sp
-
-write plotting part and enegies extraction 
 
 check again if cpcm freq and stuff is okish or if I need to do it via gasphase
+
+Make input case insensitive
