--- a/orca_pipeline/test.ipynb
+++ b/orca_pipeline/test.ipynb
@@ -16,7 +16,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aroma",
+   "display_name": "venvy",
    "language": "python",
    "name": "python3"
   },
@@ -30,7 +30,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
